--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    margin:0px;
+  margin:0px;
 }
 ul {
     list-style-type: none;
@@ -9,29 +9,65 @@ ul {
     background-color: #333;
   }
   
-  li {
-    float: right;
-  }
+li {
+  float: right;
+}
   
-  li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
 
   /* Change the link color to #111 (black) on hover */
-  li a:hover {
-    background-color: #111;
-  }
-  .ver-txt{
-      height:100%;
-      display:inline-block;
-  }
-  .ver-img{
-      display:inline-block;
-  }
-  .hor-div{
-      display:inline-block;
-  }
+li a:hover {
+  background-color: #111;
+}
+.ver-txt{
+  box-sizing: border-box;
+  padding:2vw;
+  font-size:1.7vw;
+  width:66%;
+  height:100%;
+
+  display:inline-block;
+  text-align:justify;
+}
+.ver-img{
+  box-sizing: border-box;
+  padding:2vw;
+  width:33%;
+  display:inline-block;
+}
+.hor-div{
+  background-color: #dddddd;
+  margin-left:10%;
+  margin-bottom:0;
+  padding-top:20px;
+  display:inline-block;
+  width:80%;
+}
+.hor-div:nth-of-type(2) div{
+  float:right;
+}
+.hor-div:nth-of-type(1) div{
+  float:left;
+}
+.about-us-heading{
+  box-sizing: border-box;
+  padding-left:3vw;
+  font-size:1.7vw;
+  font-weight:bold;
+  display:inline-block;
+  width:100%;
+}
+.about-us-content{
+  box-sizing: border-box;
+  padding-left:4vw;
+  padding-right:3vw;
+  font-size:1.7vw;
+  display:inline-block;
+  width:100%;
+}
