Homepage almost done

--- a/style.css
+++ b/style.css
@@ -1,73 +1,75 @@
-body {
-  margin:0px;
-}
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-  }
-  
-li {
-  float: right;
-}
-  
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-  /* Change the link color to #111 (black) on hover */
-li a:hover {
-  background-color: #111;
-}
-.ver-txt{
-  box-sizing: border-box;
-  padding:2vw;
-  font-size:1.7vw;
-  width:66%;
+html,body{
+  width: 100%;
   height:100%;
-
-  display:inline-block;
-  text-align:justify;
 }
-.ver-img{
+.carousel{
+  background-color:#0c2740;
+  position: static;
+  max-height:100%;
+}
+a{
+  cursor: pointer;
+  color:inherit;
+  text-decoration: inherit;
+}
+a:hover{
+  color: inherit;
+  text-decoration: inherit;
+}
+.navbar-custom{
+  background-color:#0c2740;
+}
+.contain{
+  display:table-cell;
   box-sizing: border-box;
-  padding:2vw;
-  width:33%;
-  display:inline-block;
+  padding-bottom:100px;
 }
-.hor-div{
-  background-color: #dddddd;
-  margin-left:10%;
-  margin-bottom:0;
-  padding-top:20px;
-  display:inline-block;
-  width:80%;
+.contain img:nth-of-type(1){
+  min-width: 200px;
+  width:45%;
+  margin: auto;
+  display: block;
 }
-.hor-div:nth-of-type(2) div{
-  float:right;
+.contain h4{
+  line-height: 1.5;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width:70%;
+  margin:auto;
+  font-size:20px;
+  font-weight: lighter;
 }
-.hor-div:nth-of-type(1) div{
-  float:left;
+.learnmore{
+  cursor: pointer;
+  display: inline-block;
+  margin: auto;
+  width: 150px;
+  border-radius:30px;
+  background-color: #26a3c1;
 }
-.about-us-heading{
-  box-sizing: border-box;
-  padding-left:3vw;
-  font-size:1.7vw;
-  font-weight:bold;
-  display:inline-block;
+.foot{
+  font-size:18px;
+  padding:10px;
   width:100%;
+  background-color: #0c2740;
 }
-.about-us-content{
-  box-sizing: border-box;
-  padding-left:4vw;
-  padding-right:3vw;
-  font-size:1.7vw;
-  display:inline-block;
-  width:100%;
+@media screen and (min-width:600px){
+  .contain{
+    width:49%;
+  }
+  .contain img:nth-of-type(2){
+    height:300px;
+    max-height:50%;
+  }
+}
+@media screen and (max-width:600px){
+  .contain{
+    display: inline-block;
+    width:100%;
+  }
+  .contain img:nth-of-type(2){
+    height:300px;
+    max-height:40%;
+    max-width: 90%;
+  }
 }
