--- a/common.css
+++ b/common.css
@@ -19,6 +19,10 @@ a:hover{
   text-decoration: inherit;
 }
 .navbar-custom{
+  width:100%;
+  z-index: 100;
+  position: fixed;
+  top: 0;
   text-align:center;
   background-color:#0c2740;
 }
